fix: vocabularies
